--- a/main.css
+++ b/main.css
@@ -1,17 +1,35 @@
+
 #map {
     width: 95vw;
     height: 95vh;
     background: url('images/map.png') no-repeat center;
     background-size: contain;
     margin: 0 auto;
+    position: relative;
+    background-color: aqua;
+}
+
+.klass_icoon {
+    width: 3vw;
+    border: 1px solid red;
+    text-align: center;
+}
+
+.klass_icoon img, p {
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 #K1A {
-    width: 100vw;
-    height: 100vh;
+    position: absolute;
+    margin-left: 10vw;
+    margin-top: 10vh;
 }
 
-#K1A img {
-    width: 32px;
-    height: 32px;
+#K2A {
+    position: absolute;
+    margin-left: 15vw;
+    margin-top: 12vh;
 }
+
