--- a/main.css
+++ b/main.css
@@ -7,27 +7,36 @@
     margin: 0 auto;
     position: relative;
     object-fit: none;
+    font-family: 'Kosugi Maru', sans-serif;
 }
 
 .klas_icoon {
-    width: 3vw;
-    text-align: center;
+    width: 4vw;   
 }
 
 .klas_icoon img, p {
     width: 100%;
     height: 100%;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .klas_naam {
     background-color: white;
-    border: 1px solid black;
+    border: 5px solid red;
     visibility: hidden;
+    font-size: 3vh;
+    font-weight: 600;
+    text-align: center;
+    width: 85%;
 }
 
 .klas_icoon img {
     cursor: pointer;
+}
+
+.klas_icoon :hover {
+    box-shadow: 0 0 11px rgba(13, 133, 212, 1);
+    background-color: rgba(13, 133, 212, 0.5);
 }
 
 /* klas icoon posities */
@@ -38,30 +47,30 @@
 }
 #K1B {
     position: absolute;
-    margin-left: 51vw;
-    margin-top: 38vh;
+    margin-left: 47vw;
+    margin-top: 36vh;
 }
 
 #K2A {
     position: absolute;
-    margin-left: 42vw;
+    margin-left: 41vw;
     margin-top: 30vh;
 }
 #K2B {
     position: absolute;
-    margin-left: 31vw;
+    margin-left: 29vw;
     margin-top: 15vh;
 }
 
 #K3A {
     position: absolute;
-    margin-left: 60vw;
+    margin-left: 66vw;
     margin-top: 17vh;
 }
 #K3B {
     position: absolute;
-    margin-left: 37vw;
-    margin-top: 54vh;
+    margin-left: 38vw;
+    margin-top: 55vh;
 }
 
 #SPA {
@@ -71,14 +80,14 @@
 }
 #SPB {
     position: absolute;
-    margin-left: 25vw;
-    margin-top: 55vh;
+    margin-left: 23vw;
+    margin-top: 52vh;
 }
 
 #dir21 {
     position: absolute;
-    margin-left: 54vw;
-    margin-top: 9vh;
+    margin-left: 53vw;
+    margin-top: 10vh;
 }
 
 #L1A {
@@ -88,29 +97,29 @@
 }
 #L1B {
     position: absolute;
-    margin-left: 49vw;
-    margin-top: 25vh;
+    margin-left: 40vw;
+    margin-top: 17vh;
 }
 
 #L2A {
     position: absolute;
-    margin-left: 38vw;
-    margin-top: 43vh;
+    margin-left: 29vw;
+    margin-top: 44vh;
 }
 #L2B {
     position: absolute;
-    margin-left: 26vw;
-    margin-top: 67vh;
+    margin-left: 25vw;
+    margin-top: 64vh;
 }
 
 #L3A {
     position: absolute;
-    margin-left: 46vw;
-    margin-top: 13vh;
+    margin-left: 48vw;
+    margin-top: 19vh;
 }
 #L3B {
     position: absolute;
-    margin-left: 34vw;
+    margin-left: 33vw;
     margin-top: 37vh;
 }
 
@@ -121,25 +130,25 @@
 }
 #L4B {
     position: absolute;
-    margin-left: 71vw;
-    margin-top: 41vh;
+    margin-left: 34vw;
+    margin-top: 65vh;
 }
 
 #L5A {
     position: absolute;
-    margin-left: 67vw;
-    margin-top: 23vh;
+    margin-left: 71vw;
+    margin-top: 33vh;
 }
 #L5B {
     position: absolute;
     margin-left: 46vw;
-    margin-top: 57vh;
+    margin-top: 55vh;
 }
 
 #L6 {
     position: absolute;
-    margin-left: 49vw;
-    margin-top: 47vh;
+    margin-left: 50vw;
+    margin-top: 45vh;
 }
 #LO {
     position: absolute;
