--- a/main.css
+++ b/main.css
@@ -1,13 +1,44 @@
+body{
+    font-family: 'Kosugi Maru', sans-serif;
+}
 
+/* GALLERY */
+#gallerij{
+    background-color: lightgray;
+    border: 2px solid red;
+    position: relative;
+    margin: auto;
+    top: 5vh;
+    width: 80vw;
+    height: 85vh;
+    z-index: 1;
+}
+#btnSluitGallerij{
+    float: right;
+    height: 30px;
+    width: 30px;
+    font-size: 25px;
+    color: red;
+    border: hidden;
+    background-color: lightgray;
+}
+#btnSluitGallerij:hover{
+    cursor: pointer;
+}
+#nanogallery2{
+    margin: 30px;
+}
+
+/* MAP AND ICONS */
 #map {
     width: 95vw;
     height: 95vh;
     background: url('images/map.png') no-repeat center;
     background-size: contain;
     margin: 0 auto;
-    position: relative;
+    position: absolute;
     object-fit: none;
-    font-family: 'Kosugi Maru', sans-serif;
+    z-index: 0;
 }
 
 .klas_icoon {
